Style Changes: - removed dummy slides - trying new approach with adjusting the ::after width for the scroll-snap container so we dont rely on the unpredictable snap behaviour on iOS (which clearly may be impossible to fix lol)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1159,8 +1159,8 @@ p {
 
     .snap-scroll-container::after {
         content: "";
-        width: 10px;
         flex: 0 0 auto;
+        width: calc(50% - 50px);
     }
 
     .snap-scroll-container .slide:last-child {
